format: Changed formatting rules and updated all files
