# src/models/book.model.ts
@@ -3,77 +3,77 @@ import db from '../db';
 import id from '../utils/nanoid';
 
 export const createBookDocument = async (
-    book: Book
+  book: Book
 ): Promise<PouchDB.Core.Response> => {
-    let response: PouchDB.Core.Response;
+  let response: PouchDB.Core.Response;
 
-    try {
-        const document: Book = {
-            _id: id(),
-            ...book,
-            createdAt: new Date().toISOString()
-        };
+  try {
+    const document: Book = {
+      _id: id(),
+      ...book,
+      createdAt: new Date().toISOString()
+    };
 
-        response = await db.put(document);
-    } catch (err) {
-        throw Error("Can't create a new book row in the database");
-    }
+    response = await db.put(document);
+  } catch (err) {
+    throw Error("Can't create a new book row in the database");
+  }
 
-    return response;
+  return response;
 };
 
 export const findAllBooksDocuments = async (): Promise<Books | []> => {
-    let response: PouchDB.Find.FindResponse<Record<string, unknown>>;
-    let books: Books;
+  let response: PouchDB.Find.FindResponse<Record<string, unknown>>;
+  let books: Books;
 
-    try {
-        const options: PouchDB.Find.FindRequest<Record<string, unknown>> = {
-            selector: {
-                name: { $gte: null }
-            },
-            fields: ['_id', 'name', 'author', 'description'],
-            sort: ['name']
-        };
+  try {
+    const options: PouchDB.Find.FindRequest<Record<string, unknown>> = {
+      selector: {
+        name: { $gte: null }
+      },
+      fields: ['_id', 'name', 'author', 'description'],
+      sort: ['name']
+    };
 
-        response = await db.find(options);
+    response = await db.find(options);
 
-        // Unfortunately, I need to typecast the response to unknown before typecasting to an array of Books
-        books = <Books>(<unknown>response.docs);
-    } catch (err) {
-        console.log(err);
+    // Unfortunately, I need to typecast the response to unknown before typecasting to an array of Books
+    books = <Books>(<unknown>response.docs);
+  } catch (err) {
+    console.log(err);
 
-        throw new Error(
-            `Couldn't retrieve all the books in the database due to error`
-        );
-    }
+    throw new Error(
+      `Couldn't retrieve all the books in the database due to error`
+    );
+  }
 
-    return books;
+  return books;
 };
 
 export const findBookDocument = async (
-    bookId: string
+  bookId: string
 ): Promise<Book | undefined> => {
-    let response: PouchDB.Core.Document<Book>;
-    let book: Book;
+  let response: PouchDB.Core.Document<Book>;
+  let book: Book;
 
-    try {
-        response = await db.get(bookId);
+  try {
+    response = await db.get(bookId);
 
-        book = {
-            _id: response._id,
-            name: response.name,
-            author: response.author,
-            description: response.description
-        };
-    } catch (err) {
-        if (err.reason === 'missing') {
-            return undefined;
-        }
-
-        throw new Error(
-            `Couldn't find the book with id ${bookId} the database due to error`
-        );
+    book = {
+      _id: response._id,
+      name: response.name,
+      author: response.author,
+      description: response.description
+    };
+  } catch (err) {
+    if (err.reason === 'missing') {
+      return undefined;
     }
 
-    return book;
+    throw new Error(
+      `Couldn't find the book with id ${bookId} the database due to error`
+    );
+  }
+
+  return book;
 };
